<resources>
    <string name="app_name">BottomSheetExample</string>
    <string name="sheet_title_text">This is a persistent Bottom Sheet</string>
    <string name="sheet_subtitle_text">You can show the rest of this sheet by sliding up.</string>
    <string name="sheet_more_text">As you can see this is the extra content that you can show to the users after sliding this bottom sheet.</string>
    <string name="simple_explanation">This is an example activity to test bottom sheets which is added to the Android Support Library at v23.2.0</string>
    <string name="simple_explanation_details">There are two types of bottom sheets:\n\nPersistent bottom sheets: it is always shown as you can see it below.\n\nModal bottom sheets: it is alternative to menus or simple dialogs. You can test it by clicking the button below.</string>
    <string name="show_bottom_sheet_modal">Show Bottom Sheet Modal</string>
    <string name="share">Share</string>
    <string name="upload">Upload</string>
    <string name="copy">Copy</string>
    <string name="print">Print</string>
</resources>
